# multichain-trial-accounts

./: .gitignore  README.md  package.json
contract/: Cargo.toml  build.sh
contract/src/: contract_export.txt  internal.rs  lib.rs  transaction_builder.rs  types.rs  utils.rs  views.rs
contract/src/active_trial/: exit_trial.rs  mod.rs  usage_tracking.rs
contract/src/chains/: ethereum.rs  mod.rs  near.rs
contract/src/models/: action.rs  chain_constraints.rs  chain_id.rs  chains.rs  constants.rs  contract.rs  key_usage.rs  mod.rs  mpc.rs  sign_request.rs  trial_data.rs  trials.rs  usage_constraints.rs
contract/src/near/: near_transaction.rs  near_transaction_builder.rs
contract/src/near/types/: actions.rs  block_hash.rs  public_key.rs  signature.rs
contract/src/near/utils/: public_key_utils.rs  signature_utils.rs
contract/src/trial_admin/: create.rs  delete.rs
contract/src/trial_creator/: add_keys.rs  create.rs  mod.rs
contract/src/trial_management/: activate_trial.rs  add_keys.rs  create_trial.rs  delete_trial.rs  mod.rs
contract/src/trial_user/: activate.rs  exit.rs  mod.rs  perform_action.rs
contract/src/trial_user/perform_actions/: action_checker.rs  mod.rs
contract/src/trial_user/perform_actions/evm/: call_fn.rs  mod.rs  serialization.rs
contract/src/trial_user/perform_actions/near/: call_fn.rs  mod.rs
deploy/: activateTrial.ts  addTickets.ts  addTrialKeys.ts  adminCreateAccounts.ts  blockHash.ts  broadcastFromSignature.ts  cleanup.ts  compareLogs.ts  config.ts  createContract.ts  createDrops.ts  createEvent.ts  createTrial.ts  index.ts  (+6 more)
(+37 files in other folders)
